# huberman_rag

./: .env.example  .gitignore  README.md  experiment_design.txt  hyde_rag.ipynb  main.ipynb  main.py  multivector_rag.ipynb  notebook.ipynb  preprocess.ipynb  preprocess_new.ipynb  pyproject.toml  rerank_rag.ipynb  whisper.ipynb  youtube_load.ipynb
compose/: docker-compose.yml
config/: models.py
data/: first.txt  second.txt
docs/: document.pkl
docs/youtube/: AMA #2： Improve Sleep, Reduce Sugar Cravings, Optimal Protein Intake, Stretching Frequency & More.json  AMA #2： Improve Sleep, Reduce Sugar Cravings, Optimal Protein Intake, Stretching Frequency & More.pkl  AMA #2： Improve Sleep, Reduce Sugar Cravings, Optimal Protein Intake, Stretching Frequency & More.txt  Adderall, Stimulants & Modafinil for ADHD： Short- & Long-Term Effects ｜ Huberman Lab Podcast.json  Adderall, Stimulants & Modafinil for ADHD： Short- & Long-Term Effects ｜ Huberman Lab Podcast.txt  Goals Toolkit： How to Set & Achieve Your Goals ｜ Huberman Lab Podcast.json  How Placebo Effects Work to Change Our Biology & Psychology.json  How Placebo Effects Work to Change Our Biology & Psychology.txt  How Psilocybin Can Rewire Our Brain, Its Therapeutic Benefits & Its Risks ｜ Huberman Lab Podcast.json  (+34 more)
examples/: anthropic_test.py  hyde_rag.py  ingest.py
notebooks/: data.json  hyde_rag.ipynb  main.ipynb  multivector_rag.ipynb  preprocess.ipynb  rerank_rag.ipynb  semantic_chunking.ipynb  sparse_dense_embeddings_tutorial.ipynb  splade.ipynb  youtube_load.ipynb  youtube_loader.ipynb
src/: bge_embeddigns.py  bgem3_embeddings.py  device.py  document_splitting.py  hyde_embeddings.py  retrievers.py  splade_embeddings.py  utils.py  vectorstore.py  videos.py  youtube_loader.py
(+1 files in other folders)
