[tool.poetry]
name = "huberman-rag"
version = "0.1.0"
description = "A Huberman podcast RAG pipeline."
authors = ["DamirBogdan39 <damirbogdan39@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src"}
]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^1.2.10"
langchain-classic = "^1.0.1"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
transformers = "^4.39.3"
torch = "^2.2.2"
bs4 = "^0.0.2"
requests = "^2.31.0"
ragas = "^0.1.6"
sentence-transformers = "^2.6.1"
pymilvus = {extras = ["model"], version = "^2.4.0"}
yt-dlp = "^2024.4.9"
pydub = "^0.25.1"
accelerate = ">=0.30.0"
datasets = {extras = ["audio"], version = "^2.18.0"}
unstructured = ">=0.14.0"
cohere = "^5.2.6"
scipy = "^1.13.0"
langchain-experimental = "^0.4.1"
langchain-anthropic = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
